--- a/Chat_with_PDF.ipynb
+++ b/Chat_with_PDF.ipynb
@@ -154,7 +154,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"\""
       ],
       "metadata": {
         "id": "rYor4lQJOUBS"
